Fixes layout bug when emoji is present

--- a/index.css
+++ b/index.css
@@ -1,3 +1,7 @@
+body {
+  background-color: #fffbf5;
+}
+
 main {
   text-align: center;
 }
@@ -13,7 +17,7 @@ main {
 .day {
   width: 138px;
   border: 2px solid black;
-  display: inline-block;
+  float: left;
 }
 
 .time {
